--- a/tox.ini
+++ b/tox.ini
@@ -16,10 +16,11 @@ basepython =
     py36: python3.6
 usedevelop = true
 commands =
-    {envpython} -R -Wonce {envbindir}/coverage run {envbindir}/django-admin.py test  --pythonpath=. --settings test_settings picklefield
+    {envpython} -R -Wonce {envbindir}/coverage run {envbindir}/django-admin.py test  --pythonpath=. --settings test_settings dillfield
     coverage report
 deps =
     coverage
+    dill
     1.8: Django>=1.8,<1.9
     1.9: Django>=1.9,<1.10
     1.10: Django>=1.10,<1.11
